--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^18.1.0",
     "react-datepicker": "^4.8.0",
     "react-dom": "^18.1.0",
+    "react-gravatar": "^2.6.3",
     "react-moment": "^1.1.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
